<resources>
    <string name="app_name">SQLiteDataBaseDemo</string>
    <string name="action_settings">Settings</string>

    <string name="my_personal_contacts">My Personal Contacts</string>
    <string name="add_contact">Add Contact</string>

    <string name="view_contacts">View Contacts</string>
    <string name="search_contact">Search Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="title_activity_add_contact">Add Contact</string>

    <string name="write_your_name">Write Name Here</string>
    <string name="write_your_number">Write Number Here</string>
    <string name="write_your_email">Write Email Here</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="title_activity_data_list">DataList</string>
    <string name="title_activity_search_contact">SearchContact</string>

    <string name="enter_name">Enter Name</string>
    <string name="search">Search</string>
    <string name="mobile_here">Mobile Here</string>
    <string name="email_here">Email Here</string>
    <string name="title_activity_update_contact">UpdateContact</string>



</resources>
