<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="easyway2fourt.com.sqlitedatabasedemo.FirstActivity"
    tools:showIn="@layout/first_layout"
    android:orientation="vertical"
    android:background="#5ca349">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_personal_contacts"
        android:layout_gravity="center_horizontal"
        android:textColor="#864f8d"
        android:textSize="35dp"
        android:textIsSelectable="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textColor="#864f8d"
        android:textSize="25dp"
        android:background="#f7942a"
        android:id="@+id/id_add_contact"
        android:layout_marginBottom="16dp"
        android:onClick="addContact"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_contacts"
        android:textColor="#864f8d"
        android:textSize="25dp"
        android:background="#f7942a"
        android:layout_marginBottom="16dp"
        android:id="@+id/id_view_contacts"
        android:onClick="viewConstacts"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_contact"
        android:textColor="#864f8d"
        android:textSize="25dp"
        android:background="#f7942a"
        android:layout_marginBottom="16dp"
        android:id="@+id/id_search_contact"
        android:onClick="searchContact"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_contact"
        android:textColor="#864f8d"
        android:textSize="25dp"
        android:background="#f7942a"
        android:layout_marginBottom="16dp"
        android:id="@+id/id_update_contact"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:textColor="#864f8d"
        android:textSize="25dp"
        android:background="#f7942a"
        android:layout_marginBottom="16dp"
        android:id="@+id/id_delete_contact"
        />

</LinearLayout>
