<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="easyway2fourt.com.sqlitedatabasedemo.SearchContactActivity"
    tools:showIn="@layout/search_contact_layout"
    android:background="#5ca349">

    <EditText
        android:id="@+id/search_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/search_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:onClick="searchContact"/>

    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/display_mobile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_here"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/search_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/display_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_here"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/display_mobile"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"/>

</RelativeLayout>
