<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="easyway2fourt.com.sqlitedatabasedemo.UpdateContactActivity"
    tools:showIn="@layout/update_contact_layout"
    android:background="#5ca349">

    <EditText
        android:id="@+id/search_name"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/search_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:onClick="searchContact"/>

    <TextView
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_contact"
        android:layout_below="@id/search_name"
        android:layout_marginTop="26dp"
        android:textSize="40dp"
        android:textColor="#864f8d"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:hint="Name Here"
        android:layout_below="@id/search_name"
        android:layout_marginTop="90dp"/>

    <EditText
        android:id="@+id/new_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:hint="Mobile Here"
        android:layout_below="@id/new_name"
        android:layout_marginTop="6dp"/>

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:hint="Name Here"
        android:layout_below="@id/new_mobile"
        android:layout_marginTop="6dp"/>

    <Button
        android:id="@+id/update_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_contact"
        android:layout_below="@id/new_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="26dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:onClick="updateContact" />

</RelativeLayout>
